<package>
  <name>waypoint_example_mine</name>
  <version>0.0.1</version>
  <description>Waypoint Example</description>
  <maintainer email="zhangji@cmu.edu">Ji Zhang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>pcl_ros</run_depend>
    <!-- 添加build时依赖 -->
  <build_depend>rs_yolo</build_depend>
  <!-- 添加运行时依赖 -->
  <run_depend>rs_yolo</run_depend>

</package>
